tests/rosetta/out/C/abbreviations-automatic.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int fields(char *s) {
  list_string tmp1 = {0, NULL};
  int words = tmp1;
  const char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    const char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, " ") == 0) || ch == "\n" || ch == "\t") {
      if (strlen(cur) > 0) {
        list_string tmp2 = list_string_create(1);
        tmp2.data[0] = cur;
        list_string tmp3 = concat_list_string(words, tmp2);
        words = tmp3;
        cur = "";
      }
    } else {
      char *tmp4 = concat_string(cur, ch);
      cur = tmp4;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp5 = list_string_create(1);
    tmp5.data[0] = cur;
    list_string tmp6 = concat_list_string(words, tmp5);
    words = tmp6;
  }
  return words;
}

const char *takeRunes(char *s, int n) {
  int idx = 0;
  int count = 0;
  while (idx < strlen(s)) {
    if ((count == n)) {
      return slice_string(s, 0, idx);
    }
    idx = idx + 1;
    count = count + 1;
  }
  return s;
}

int distinct(list_string xs) {
  map_string_int tmp7 = map_string_int_create(0);
  int m = tmp7;
  list_string tmp8 = {0, NULL};
  int out = tmp8;
  int i = 0;
  while (i < xs.len) {
    const char *x = xs.data[i];
    if ((!(x in m))) {
      m.data[x] = 1;
      list_string tmp9 = list_string_create(1);
      tmp9.data[0] = x;
      list_string tmp10 = concat_list_string(out, tmp9);
      out = tmp10;
    }
    i = i + 1;
  }
  return out;
}

int abbrevLen(list_string words) {
  int size = words.len;
  int l = 1;
  while (1) {
    list_string tmp11 = {0, NULL};
    int abbrs = tmp11;
    int i = 0;
    while (i < size) {
      list_string tmp12 = list_string_create(1);
      tmp12.data[0] = takeRunes(words.data[i], l);
      list_string tmp13 = concat_list_string(abbrs, tmp12);
      abbrs = tmp13;
      i = i + 1;
    }
    if (distinct(abbrs).len == size) {
      return l;
    }
    l = l + 1;
  }
  return 0;
}

const char *pad2(int n) {
  char *tmp14 = _str(n);
  const char *s = tmp14;
  if (strlen(s) < 2) {
    char *tmp15 = concat_string(" ", s);
    return tmp15;
  }
  return s;
}

int main() {
  list_string lines = list_string_create(98);
  lines.data[0] = "Sunday Monday Tuesday Wednesday Thursday Friday Saturday";
  lines.data[1] = "Sondag Maandag Dinsdag Woensdag Donderdag Vrydag Saterdag";
  lines.data[2] = "E_djelë E_hënë E_martë E_mërkurë E_enjte E_premte E_shtunë";
  lines.data[3] = "Ehud Segno Maksegno Erob Hamus Arbe Kedame";
  lines.data[4] = "Al_Ahad Al_Ithinin Al_Tholatha'a Al_Arbia'a Al_Kamis "
                  "Al_Gomia'a Al_Sabit";
  lines.data[5] = "Guiragui Yergou_shapti Yerek_shapti Tchorek_shapti "
                  "Hink_shapti Ourpat Shapat";
  lines.data[6] = "domingu llunes martes miércoles xueves vienres sábadu";
  lines.data[7] = "Bazar_gÜnÜ Birinci_gÜn Çkinci_gÜn ÜçÜncÜ_gÜn DÖrdÜncÜ_gÜn "
                  "Bes,inci_gÜn Altòncò_gÜn";
  lines.data[8] =
      "Igande Astelehen Astearte Asteazken Ostegun Ostiral Larunbat";
  lines.data[9] = "Robi_bar Shom_bar Mongal_bar Budhh_bar BRihashpati_bar "
                  "Shukro_bar Shoni_bar";
  lines.data[10] = "Nedjelja Ponedeljak Utorak Srijeda Cxetvrtak Petak Subota";
  lines.data[11] = "Disul Dilun Dimeurzh Dimerc'her Diriaou Digwener Disadorn";
  lines.data[12] = "nedelia ponedelnik vtornik sriada chetvartak petak sabota";
  lines.data[13] = "sing_kei_yaht sing_kei_yat sing_kei_yee sing_kei_saam "
                   "sing_kei_sie sing_kei_ng sing_kei_luk";
  lines.data[14] =
      "Diumenge Dilluns Dimarts Dimecres Dijous Divendres Dissabte";
  lines.data[15] = "Dzeenkk-eh Dzeehn_kk-ehreh Dzeehn_kk-ehreh_nah_kay_dzeeneh "
                   "Tah_neesee_dzeehn_neh Deehn_ghee_dzee-neh "
                   "Tl-oowey_tts-el_dehlee Dzeentt-ahzee";
  lines.data[16] =
      "dy_Sul dy_Lun dy_Meurth dy_Mergher dy_You dy_Gwener dy_Sadorn";
  lines.data[17] = "Dimanch Lendi Madi Mèkredi Jedi Vandredi Samdi";
  lines.data[18] = "nedjelja ponedjeljak utorak srijeda cxetvrtak petak subota";
  lines.data[19] = "nede^le ponde^lí úterÿ str^eda c^tvrtek pátek sobota";
  lines.data[20] =
      "Sondee Mondee Tiisiday Walansedee TOOsedee Feraadee Satadee";
  lines.data[21] = "s0ndag mandag tirsdag onsdag torsdag fredag l0rdag";
  lines.data[22] = "zondag maandag dinsdag woensdag donderdag vrijdag zaterdag";
  lines.data[23] = "Diman^co Lundo Mardo Merkredo ^Jaùdo Vendredo Sabato";
  lines.data[24] =
      "pÜhapäev esmaspäev teisipäev kolmapäev neljapäev reede laupäev";
  lines.data[25] = "Diu_prima Diu_sequima Diu_tritima Diu_quartima "
                   "Diu_quintima Diu_sextima Diu_sabbata";
  lines.data[26] = "sunnudagur mánadagur tÿsdaguy mikudagur hósdagur "
                   "friggjadagur leygardagur";
  lines.data[27] = "Yek_Sham'beh Do_Sham'beh Seh_Sham'beh Cha'har_Sham'beh "
                   "Panj_Sham'beh Jom'eh Sham'beh";
  lines.data[28] =
      "sunnuntai maanantai tiistai keskiviiko torsktai perjantai lauantai";
  lines.data[29] = "dimanche lundi mardi mercredi jeudi vendredi samedi";
  lines.data[30] = "Snein Moandei Tiisdei Woansdei Tonersdei Freed Sneon";
  lines.data[31] = "Domingo Segunda_feira Martes Mércores Joves Venres Sábado";
  lines.data[32] =
      "k'vira orshabati samshabati otkhshabati khutshabati p'arask'evi shabati";
  lines.data[33] =
      "Sonntag Montag Dienstag Mittwoch Donnerstag Freitag Samstag";
  lines.data[34] =
      "Kiriaki' Defte'ra Tri'ti Teta'rti Pe'mpti Paraskebi' Sa'bato";
  lines.data[35] =
      "ravivaar somvaar mangalvaar budhvaar guruvaar shukravaar shanivaar";
  lines.data[36] = "pópule pó`akahi pó`alua pó`akolu pó`ahá pó`alima pó`aono";
  lines.data[37] = "Yom_rishon Yom_sheni Yom_shlishi Yom_revi'i Yom_chamishi "
                   "Yom_shishi Shabat";
  lines.data[38] =
      "ravivara somavar mangalavar budhavara brahaspativar shukravara shanivar";
  lines.data[39] = "vasárnap hétfö kedd szerda csütörtök péntek szombat";
  lines.data[40] = "Sunnudagur Mánudagur ╞riδjudagur Miδvikudagar Fimmtudagur "
                   "FÖstudagur Laugardagur";
  lines.data[41] = "sundio lundio mardio merkurdio jovdio venerdio saturdio";
  lines.data[42] = "Minggu Senin Selasa Rabu Kamis Jumat Sabtu";
  lines.data[43] = "Dominica Lunedi Martedi Mercuridi Jovedi Venerdi Sabbato";
  lines.data[44] = "Dé_Domhnaigh Dé_Luain Dé_Máirt Dé_Ceadaoin Dé_ardaoin "
                   "Dé_hAoine Dé_Sathairn";
  lines.data[45] = "domenica lunedí martedí mercoledí giovedí venerdí sabato";
  lines.data[46] = "Nichiyou_bi Getzuyou_bi Kayou_bi Suiyou_bi Mokuyou_bi "
                   "Kin'you_bi Doyou_bi";
  lines.data[47] =
      "Il-yo-il Wol-yo-il Hwa-yo-il Su-yo-il Mok-yo-il Kum-yo-il To-yo-il";
  lines.data[48] = "Dies_Dominica Dies_Lunæ Dies_Martis Dies_Mercurii "
                   "Dies_Iovis Dies_Veneris Dies_Saturni";
  lines.data[49] =
      "sve-tdien pirmdien otrdien tresvdien ceturtdien piektdien sestdien";
  lines.data[50] = "Sekmadienis Pirmadienis Antradienis Trec^iadienis "
                   "Ketvirtadienis Penktadienis S^es^tadienis";
  lines.data[51] = "Wangu Kazooba Walumbe Mukasa Kiwanuka Nnagawonye Wamunyi";
  lines.data[52] = "xing-_qi-_rì xing-_qi-_yi-. xing-_qi-_èr xing-_qi-_san-. "
                   "xing-_qi-_sì xing-_qi-_wuv. xing-_qi-_liù";
  lines.data[53] = "Jedoonee Jelune Jemayrt Jecrean Jardaim Jeheiney Jesam";
  lines.data[54] = "Jabot Manre Juje Wonje Taije Balaire Jarere";
  lines.data[55] =
      "geminrongo minòmishi mártes mièrkoles misheushi bèrnashi mishábaro";
  lines.data[56] = "Ahad Isnin Selasa Rabu Khamis Jumaat Sabtu";
  lines.data[57] = "sφndag mandag tirsdag onsdag torsdag fredag lφrdag";
  lines.data[58] = "lo_dimenge lo_diluns lo_dimarç lo_dimèrcres lo_dijòus "
                   "lo_divendres lo_dissabte";
  lines.data[59] =
      "djadomingo djaluna djamars djarason djaweps djabièrna djasabra";
  lines.data[60] =
      "Niedziela Poniedzial/ek Wtorek S,roda Czwartek Pia,tek Sobota";
  lines.data[61] = "Domingo segunda-feire terça-feire quarta-feire "
                   "quinta-feire sexta-feira såbado";
  lines.data[62] = "Domingo Lunes martes Miercoles Jueves Viernes Sabado";
  lines.data[63] = "Duminicª Luni Mart'i Miercuri Joi Vineri Sâmbªtª";
  lines.data[64] =
      "voskresenie ponedelnik vtornik sreda chetverg pyatnitsa subbota";
  lines.data[65] =
      "Sunday Di-luain Di-màirt Di-ciadain Di-ardaoin Di-haoine Di-sathurne";
  lines.data[66] = "nedjelja ponedjeljak utorak sreda cxetvrtak petak subota";
  lines.data[67] =
      "Sontaha Mmantaha Labobedi Laboraro Labone Labohlano Moqebelo";
  lines.data[68] = "Iridha- Sandhudha- Anga.haruwa-dha- Badha-dha- "
                   "Brahaspa.thindha- Sikura-dha- Sena.sura-dha-";
  lines.data[69] = "nedel^a pondelok utorok streda s^tvrtok piatok sobota";
  lines.data[70] = "Nedelja Ponedeljek Torek Sreda Cxetrtek Petek Sobota";
  lines.data[71] = "domingo lunes martes miércoles jueves viernes sábado";
  lines.data[72] =
      "sonde mundey tude-wroko dride-wroko fode-wroko freyda Saturday";
  lines.data[73] =
      "Jumapili Jumatatu Jumanne Jumatano Alhamisi Ijumaa Jumamosi";
  lines.data[74] = "söndag måndag tisdag onsdag torsdag fredag lordag";
  lines.data[75] = "Linggo Lunes Martes Miyerkoles Huwebes Biyernes Sabado";
  lines.data[76] = "Lé-pài-jít Pài-it Pài-jï Pài-sañ Pài-sì Pài-gÖ. Pài-lák";
  lines.data[77] = "wan-ar-tit wan-tjan wan-ang-kaan wan-phoet "
                   "wan-pha-ru-hat-sa-boh-die wan-sook wan-sao";
  lines.data[78] =
      "Tshipi Mosupologo Labobedi Laboraro Labone Labotlhano Matlhatso";
  lines.data[79] = "Pazar Pazartesi Sali Çar,samba Per,sembe Cuma Cumartesi";
  lines.data[80] =
      "nedilya ponedilok vivtorok sereda chetver pyatnytsya subota";
  lines.data[81] =
      "Chu?_Nhâ.t Thú*_Hai Thú*_Ba Thú*_Tu* Thú*_Na'm Thú*_Sáu Thú*_Ba?y";
  lines.data[82] = "dydd_Sul dyds_Llun dydd_Mawrth dyds_Mercher dydd_Iau "
                   "dydd_Gwener dyds_Sadwrn";
  lines.data[83] = "Dibeer Altine Talaata Allarba Al_xebes Aljuma Gaaw";
  lines.data[84] =
      "iCawa uMvulo uLwesibini uLwesithathu uLuwesine uLwesihlanu uMgqibelo";
  lines.data[85] = "zuntik montik dinstik mitvokh donershtik fraytik shabes";
  lines.data[86] = "iSonto uMsombuluko uLwesibili uLwesithathu uLwesine "
                   "uLwesihlanu uMgqibelo";
  lines.data[87] = "Dies_Dominica Dies_Lunæ Dies_Martis Dies_Mercurii "
                   "Dies_Iovis Dies_Veneris Dies_Saturni";
  lines.data[88] = "Bazar_gÜnÜ Bazar_ærtæsi Çærs,ænbæ_axs,amò Çærs,ænbæ_gÜnÜ "
                   "CÜmæ_axs,amò CÜmæ_gÜnÜ CÜmæ_Senbæ";
  lines.data[89] = "Sun Moon Mars Mercury Jove Venus Saturn";
  lines.data[90] = "zondag maandag dinsdag woensdag donderdag vrijdag zaterdag";
  lines.data[91] = "KoseEraa GyoOraa BenEraa Kuoraa YOwaaraa FeEraa Memenaa";
  lines.data[92] =
      "Sonntag Montag Dienstag Mittwoch Donnerstag Freitag Sonnabend";
  lines.data[93] = "Domingo Luns Terza_feira Corta_feira Xoves Venres Sábado";
  lines.data[94] = "Dies_Solis Dies_Lunae Dies_Martis Dies_Mercurii Dies_Iovis "
                   "Dies_Veneris Dies_Sabbatum";
  lines.data[95] = "xing-_qi-_tiàn xing-_qi-_yi-. xing-_qi-_èr xing-_qi-_san-. "
                   "xing-_qi-_sì xing-_qi-_wuv. xing-_qi-_liù";
  lines.data[96] =
      "djadomingu djaluna djamars djarason djaweps djabièrnè djasabra";
  lines.data[97] = "Killachau Atichau Quoyllurchau Illapachau Chaskachau "
                   "Kuychichau Intichau";
  int lines = lines;
  int i = 0;
  while (i < lines.len) {
    int words = fields(lines.data[i]);
    int l = abbrevLen(words);
    printf("%s\n", pad2(l) + "  " + lines.data[i]);
    i = i + 1;
  }
}

int main() {
  main();
  return 0;
}
